# Quartopy

./: .gitignore  pyproject.toml  quarto_CLI.py  requirements.txt  temp_patch.py
data/: bots.json
partidas_guardadas/: 2026-01-11_17-10-18_match001.csv  2026-01-11_17-26-03_match001.csv  2026-01-11_17-30-39_match001.csv  2026-01-11_17-41-42_match001.csv  2026-01-11_17-52-10_match001.csv  2026-01-11_17-53-31_match001.csv  2026-01-11_19-11-46_match001.csv  2026-01-11_20-57-16_match001.csv  2026-01-11_22-55-08_match001.csv  2026-01-11_22-56-14_match001.csv  2026-01-11_23-08-42_match001.csv  2026-01-11_23-41-07_match001.csv  2026-01-11_23-44-21_match001.csv  2026-01-12_00-03-33_match001.csv  2026-01-12_00-04-26_match001.csv  2026-01-12_11-11-02_match001.csv  2026-01-12_11-58-48_match001.csv  2026-01-12_12-24-03_match001.csv  2026-01-12_21-15-29_match001.csv  2026-01-12_21-31-48_match001.csv  2026-01-12_21-36-32_match001.csv  2026-01-12_21-46-26_match001.csv  2026-01-12_21-51-12_match001.csv  2026-01-12_21-51-43_match001.csv  2026-01-12_21-52-24_match001.csv  2026-01-23_11-31-19_match001.csv  2026-01-23_12-46-07_match001.csv  2026-01-23_12-50-44_match001.csv  2026-01-31_23-37-56_match001.csv  2026-01-31_23-51-19_match001.csv  2026-01-31_23-51-38_match001.csv  2026-02-01_00-38-01_match001.csv  2026-02-01_00-38-56_match001.csv  2026-02-01_00-42-54_match001.csv  2026-02-02_09-26-25_match001.csv  2026-02-02_09-42-15_match001.csv  2026-02-02_09-49-43_match001.csv  2026-02-02_09-52-08_match001.csv  2026-02-02_09-52-35_match001.csv  2026-02-02_10-36-00_match001.csv  (+30 more)
quartopy/: __init__.py  (+1 more)
(+28 files in other folders)
